# termagatchi

./: .gitignore  ORIGINAL_VISION.md  README.md  main.py  mise.toml  pyproject.toml
src/termagatchi/: __init__.py  app.py  cli.py  dev.py
src/termagatchi/ai/: __init__.py  client.py  fallback.py  schema.py
src/termagatchi/data/: items.yaml
src/termagatchi/engine/: __init__.py  actions.py  enhanced_animations.py  items.py  models.py  state.py
src/termagatchi/themes/: termagatchi.tcss
src/termagatchi/widgets/: __init__.py  chat.py  input.py  notifications.py  sprite.py  status.py
