[project]
name = "termagatchi"
version = "0.1.0"
description = "A virtual terminal pet powered by AI - built with Textual and LiteLLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=6.1.0",
    "typer>=0.19.2",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "instructor>=1.0.0",
    "ruamel.yaml>=0.18.0",
    "tomli-w>=1.0.0",
    "openai>=1.0.0",
]
authors = [
    {name = "Termagatchi Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
]

[project.scripts]
termagatchi = "termagatchi.cli:app"
tama-lint = "termagatchi.dev:lint"
tama-format = "termagatchi.dev:format"
tama-check = "termagatchi.dev:check"

[project.urls]
Homepage = "https://github.com/your-username/termagatchi"
Repository = "https://github.com/your-username/termagatchi"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=25.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
